@@ -92,6 +92,9 @@ problems:</para>
 
 <itemizedlist>
 
+<listitem><para>Consider getting rid of the checked-in top-level documents.
+Don't know why we are doing that at all.</para></listitem>
+
 <listitem><para>Get rid of the "C object model", e.g.
 <literal>atf_object_t</literal>.  It is completely useless at this point
 and just causes pain.  If we want to catch leaks, let's just use Valgrind
